crates/core/src/snapshots/sonicmux_core__plan__tests__remux_plan.snap
---
source: crates/core/src/plan.rs
expression: "build(&media(&[dts(true), ac3(false)]), &policy(OutputMode::Add, action))"
---
Ok(
    Execute(
        JobPlan {
            input: "movie.mkv",
            output: "movie.sonicmux.mkv",
            action: RemuxOnly,
            streams: [
                Copy {
                    source: StreamIndex(
                        0,
                    ),
                    dispositions: Dispositions {
                        default: false,
                        dub: false,
                        original: false,
                        comment: false,
                        lyrics: false,
                        karaoke: false,
                        forced: false,
                        hearing_impaired: false,
                        visual_impaired: false,
                        clean_effects: false,
                        attached_pic: false,
                        timed_thumbnails: false,
                        captions: false,
                        descriptions: false,
                        metadata: false,
                        dependent: false,
                        still_image: false,
                        other: {},
                    },
                },
                Copy {
                    source: StreamIndex(
                        1,
                    ),
                    dispositions: Dispositions {
                        default: false,
                        dub: false,
                        original: false,
                        comment: false,
                        lyrics: false,
                        karaoke: false,
                        forced: true,
                        hearing_impaired: false,
                        visual_impaired: false,
                        clean_effects: false,
                        attached_pic: false,
                        timed_thumbnails: false,
                        captions: false,
                        descriptions: false,
                        metadata: false,
                        dependent: false,
                        still_image: false,
                        other: {},
                    },
                },
                Copy {
                    source: StreamIndex(
                        2,
                    ),
                    dispositions: Dispositions {
                        default: true,
                        dub: false,
                        original: false,
                        comment: false,
                        lyrics: false,
                        karaoke: false,
                        forced: true,
                        hearing_impaired: false,
                        visual_impaired: false,
                        clean_effects: false,
                        attached_pic: false,
                        timed_thumbnails: false,
                        captions: false,
                        descriptions: false,
                        metadata: false,
                        dependent: false,
                        still_image: false,
                        other: {},
                    },
                },
            ],
            copy_chapters: true,
            copy_global_metadata: true,
            warnings: [],
            expected: OutputExpectations {
                streams: [
                    ExpectedStream {
                        source: StreamIndex(
                            0,
                        ),
                        codec: Copied(
                            "hevc",
                        ),
                        metadata: Metadata(
                            {},
                        ),
                        dispositions: Dispositions {
                            default: false,
                            dub: false,
                            original: false,
                            comment: false,
                            lyrics: false,
                            karaoke: false,
                            forced: false,
                            hearing_impaired: false,
                            visual_impaired: false,
                            clean_effects: false,
                            attached_pic: false,
                            timed_thumbnails: false,
                            captions: false,
                            descriptions: false,
                            metadata: false,
                            dependent: false,
                            still_image: false,
                            other: {},
                        },
                    },
                    ExpectedStream {
                        source: StreamIndex(
                            1,
                        ),
                        codec: Copied(
                            "dts",
                        ),
                        metadata: Metadata(
                            {
                                "language": "eng",
                                "title": "Main",
                            },
                        ),
                        dispositions: Dispositions {
                            default: false,
                            dub: false,
                            original: false,
                            comment: false,
                            lyrics: false,
                            karaoke: false,
                            forced: true,
                            hearing_impaired: false,
                            visual_impaired: false,
                            clean_effects: false,
                            attached_pic: false,
                            timed_thumbnails: false,
                            captions: false,
                            descriptions: false,
                            metadata: false,
                            dependent: false,
                            still_image: false,
                            other: {},
                        },
                    },
                    ExpectedStream {
                        source: StreamIndex(
                            2,
                        ),
                        codec: Copied(
                            "ac3",
                        ),
                        metadata: Metadata(
                            {
                                "language": "eng",
                                "title": "Compatible",
                            },
                        ),
                        dispositions: Dispositions {
                            default: true,
                            dub: false,
                            original: false,
                            comment: false,
                            lyrics: false,
                            karaoke: false,
                            forced: true,
                            hearing_impaired: false,
                            visual_impaired: false,
                            clean_effects: false,
                            attached_pic: false,
                            timed_thumbnails: false,
                            captions: false,
                            descriptions: false,
                            metadata: false,
                            dependent: false,
                            still_image: false,
                            other: {},
                        },
                    },
                ],
                chapters: [],
                global_metadata: Metadata(
                    {},
                ),
            },
        },
    ),
)
